--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --proxy-config proxy.conf.json",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "test": "ng test"
@@ -18,9 +18,13 @@
         "@angular/platform-browser": "^16.2.0",
         "@angular/platform-browser-dynamic": "^16.2.0",
         "@angular/router": "^16.2.0",
+        "@ng-bootstrap/ng-bootstrap": "14.1.1",
+        "@popperjs/core": "^2.11.7",
+        "apexcharts": "^3.40.0",
+        "ng-apexcharts": "^1.7.6",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
-        "primeng": "^17.3.3",
+        "primeng": "^17.4.0",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.13.0"
