--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@ng-bootstrap/ng-bootstrap": "14.1.1",
         "@popperjs/core": "^2.11.7",
         "apexcharts": "^3.40.0",
+        "chart.js": "^4.4.1",
         "ng-apexcharts": "^1.7.6",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
