--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@popperjs/core": "^2.11.7",
         "apexcharts": "^3.40.0",
         "chart.js": "^4.4.1",
+        "jwt-decode": "^4.0.0",
         "ng-apexcharts": "^1.7.6",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
